Bug 1695528 - Activate the bundled Twemoji Mozilla font by default on all Windows versions, for better character coverage than Segoe UI Emoji offers. r=lsalzman, a=jcristau

This essentially reverts what we did in bug 1686274, because users are not happy
with just getting Segoe UI Emoji instead. However, the pref is left in place so
that we can easily experiment with disabling the font to continue testing the
impact on startup, rendering, etc.

Differential Revision: https://phabricator.services.mozilla.com/D107056