gfx/thebes/gfxDWriteFontList.cpp
@@ -1490,12 +1490,9 @@ void gfxDWriteFontList::InitSharedFontListForPlatform() {
     return;
   }
 #ifdef MOZ_BUNDLED_FONTS
-  // If the bundled-fonts pref is < 0 (auto), we skip the bundled fonts on
-  // Windows 10 or later, where Segoe UI Emoji is available and should be
-  // kept reasonably up-to-date by Windows.
-  if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() > 0 ||
-      (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() < 0 &&
-       !IsWin10OrLater())) {
+  // We activate bundled fonts if the pref is > 0 (on) or < 0 (auto), only an
+  // explicit value of 0 (off) will disable them.
+  if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() != 0) {
     mBundledFonts = CreateBundledFontsCollection(factory);
   }
 #endif
@@ -1579,12 +1576,9 @@ nsresult gfxDWriteFontList::InitFontListForPlatform() {
   // Get bundled fonts before the system collection, so that in the case of
   // duplicate names, we have recorded the family as bundled (and therefore
   // available regardless of visibility settings).
-  // If the bundled-fonts pref is < 0 (auto), we skip the bundled fonts on
-  // Windows 10 or later, where Segoe UI Emoji is available and should be
-  // kept reasonably up-to-date by Windows.
-  if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() > 0 ||
-      (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() < 0 &&
-       !IsWin10OrLater())) {
+  // We activate bundled fonts if the pref is > 0 (on) or < 0 (auto), only an
+  // explicit value of 0 (off) will disable them.
+  if (StaticPrefs::gfx_bundled_fonts_activate_AtStartup() != 0) {
     mBundledFonts = CreateBundledFontsCollection(factory);
   }
   if (mBundledFonts) {
